gallows only invisible when in landscape, prevent scroll in portrait, fix modal size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,25 +254,25 @@ button {
 
 .stickman-larm {
   height: 1.2rem;
-  left: 4.5rem;
-  bottom: 20.7rem;
+  left: -10.5rem;
+  bottom: 16.2rem;
 }
 
 .stickman-rleg {
   height: 4rem;
-  right: 8.5rem;
-  bottom: 13rem;
+  right: 3rem;
+  bottom: 12.5rem;
 }
 
 .stickman-lleg {
   height: 4rem;
-  right: 1rem;
-  bottom: 13rem;
+  right: -4.7rem;
+  bottom: 12.5rem;
 }
 
 .stickman-face {
   height: 4rem;
-  left: -11rem;
+  left: -5.2rem;
   bottom: 23.2rem;
 }
 
@@ -328,6 +328,7 @@ button {
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
   z-index: 105;
+  overflow: hidden;
 }
 
 /* Modal Content */
@@ -337,7 +338,7 @@ button {
   margin: 0 10%;
   padding: 20px;
   border: 1px solid #888;
-  max-width: 1080px;
+  max-width: 1000px;
   max-height: 450px;
   overflow-y: scroll;
 }
@@ -449,6 +450,16 @@ button {
     height: 120vh;
   }
   html {
-    background-size: 115vw 200vh;
+    background-size: 115vw 600vh;
+  }
+  .modal {
+    height: 110vh;
+    width: 110vw;
+  }
+}
+
+@media only screen and (orientation: portrait) {
+  html {
+    overflow-y: hidden;
   }
 }
